trunk/Archive2/1b/704a8166965fb6/output
main.cpp: In function 'int main()':
main.cpp:20:37: error: 'strerror' was not declared in this scope
   cout << "shit: " << strerror(errno);
                                     ^
